--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
 
       - name: Install dependencies
         run: npm install --save-dev eslint
 
       - name: Run ESLint
-        run: npx eslint --ext .js . || true
+        run: npx eslint --ext .js .
 
   validate:
     name: Validate Extension
