--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "FarisZR",
   "license": "GPL-2.0-or-later",
   "devDependencies": {
-    "eslint": "^8.0.0"
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0"
   }
 }
